Veritabanı şeması ve tablo modellerinin oluşturulması

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb+srv://username:password@cluster0.example.mongodb.net/sosyaletkinlik?retryWrites=true&w=majority
 PORT=5000
-JWT_SECRET=sosyaletkinlik_gizli_anahtar123
+MONGODB_URI=mongodb+srv://<username>:<password>@<cluster>.mongodb.net/sosyal-etkinlik?retryWrites=true&w=majority
+JWT_SECRET=sosyal-etkinlik-gizli-anahtar123
 NODE_ENV=development 
