Kullanıcı kayıt/giriş API endpointlerin ve JWT sistemi kurulumu

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,28 @@
 PORT=5000
-MONGODB_URI=mongodb+srv://<username>:<password>@<cluster>.mongodb.net/sosyal-etkinlik?retryWrites=true&w=majority
-JWT_SECRET=sosyal-etkinlik-gizli-anahtar123
-NODE_ENV=development 
+MONGODB_URI=mongodb+srv://clbkmustafa123:427626Clbk.@sosyaletkinlikcluster.a42w5.mongodb.net/?retryWrites=true&w=majority&appName=SosyalEtkinlikCluster
+JWT_SECRET=SosyalDatabase-gizli-anahtar123
+JWT_REFRESH_SECRET=SosyalDatabase-gizli-anahtar123-refresh
+JWT_EXPIRE=30d
+JWT_REFRESH_EXPIRE=7d
+NODE_ENV=development
+
+# Email Ayarları
+# Geliştirme ortamında Ethereal.email gibi test servisi kullanılabilir
+# Üretim ortamında gerçek email servisi ayarlarını kullanın
+
+# Yerel geliştirme için Ethereal kullanmak istiyorsanız:
+# ETHEREAL_EMAIL=test@ethereal.email
+# ETHEREAL_PASSWORD=password
+
+# Gerçek email servisi için:
+# EMAIL_HOST=smtp.example.com
+# EMAIL_PORT=587
+# EMAIL_USER=username@example.com
+# EMAIL_PASSWORD=password
+# EMAIL_SECURE=false
+# FROM_NAME=Sosyal Etkinlik
+# FROM_EMAIL=noreply@sosyaletkinlik.com
+
+# Client URL'leri
+CLIENT_URL_WEB=http://localhost:3000
+CLIENT_URL_MOBILE=exp://localhost:19000 
