Hobi kategorilerinin oluşturulması,Kullanıcı profil yönetimi API'lerinin tamamlanması

--- a/backend/.env
+++ b/backend/.env
@@ -7,21 +7,21 @@ JWT_REFRESH_EXPIRE=7d
 NODE_ENV=development
 
 # Email Ayarları
-# Geliştirme ortamında Ethereal.email gibi test servisi kullanılabilir
-# Üretim ortamında gerçek email servisi ayarlarını kullanın
+# Test modu etkin (sorun gidermek için)
+ETHEREAL_EMAIL=true
 
-# Yerel geliştirme için Ethereal kullanmak istiyorsanız:
-# ETHEREAL_EMAIL=test@ethereal.email
-# ETHEREAL_PASSWORD=password
-
-# Gerçek email servisi için:
-# EMAIL_HOST=smtp.example.com
-# EMAIL_PORT=587
-# EMAIL_USER=username@example.com
-# EMAIL_PASSWORD=password
-# EMAIL_SECURE=false
-# FROM_NAME=Sosyal Etkinlik
-# FROM_EMAIL=noreply@sosyaletkinlik.com
+# Gmail SMTP Ayarları - GERÇEK MAİL GÖNDERME AYARLARI
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+# Gmail adresinizi girin
+EMAIL_USER=mcalbak123@gmail.com
+# Gmail Uygulama Şifrenizi girin (Google hesabınızdan oluşturmanız gerekiyor)
+# Uygulama şifresi oluşturma: https://myaccount.google.com/apppasswords
+EMAIL_PASSWORD=lqmdwoxngcdvozop
+EMAIL_SECURE=false
+FROM_NAME=Sosyal Etkinlik
+# Aynı Gmail adresinizi buraya da yazın
+FROM_EMAIL=mcalbak123@gmail.com
 
 # Client URL'leri
 CLIENT_URL_WEB=http://localhost:3000
