--- a/backend/.env
+++ b/backend/.env
@@ -8,21 +8,19 @@ NODE_ENV=development
 
 # Email Ayarları
 # Test modu etkin (sorun gidermek için)
-ETHEREAL_EMAIL=true
+
 
 # Gmail SMTP Ayarları - GERÇEK MAİL GÖNDERME AYARLARI
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
 # Gmail adresinizi girin
 EMAIL_USER=mcalbak123@gmail.com
-# Gmail Uygulama Şifrenizi girin (Google hesabınızdan oluşturmanız gerekiyor)
-# Uygulama şifresi oluşturma: https://myaccount.google.com/apppasswords
 EMAIL_PASSWORD=lqmdwoxngcdvozop
-EMAIL_SECURE=false
-FROM_NAME=Sosyal Etkinlik
-# Aynı Gmail adresinizi buraya da yazın
+FROM_NAME=Sosyal Etkinlik Platformu
 FROM_EMAIL=mcalbak123@gmail.com
+ETHEREAL_EMAIL=false
+
 
 # Client URL'leri
 CLIENT_URL_WEB=http://localhost:3000
-CLIENT_URL_MOBILE=exp://localhost:19000 
+CLIENT_URL_MOBILE=exp://localhost:19000 LE=exp://localhost:19000 LE=exp://localhost:19000 LE=exp://localhost:19000 LE=exp://localhost:19000 
