Şifre sıfırlama akışının güncellenmesi

--- a/backend/.env
+++ b/backend/.env
@@ -1,26 +1,19 @@
 PORT=5000
-MONGODB_URI=mongodb+srv://clbkmustafa123:427626Clbk.@sosyaletkinlikcluster.a42w5.mongodb.net/?retryWrites=true&w=majority&appName=SosyalEtkinlikCluster
-JWT_SECRET=SosyalDatabase-gizli-anahtar123
-JWT_REFRESH_SECRET=SosyalDatabase-gizli-anahtar123-refresh
-JWT_EXPIRE=30d
-JWT_REFRESH_EXPIRE=7d
 NODE_ENV=development
 
-# Email Ayarları
-# Test modu etkin (sorun gidermek için)
+# MongoDB Connection
+MONGODB_URI=mongodb+srv://clbkmustafa123:427626Clbk.@sosyaletkinlikcluster.a42w5.mongodb.net/sosyaletkinlik?retryWrites=true&w=majority
 
+# JWT Secret
+JWT_SECRET=sosyaletkinlik-super-secret-jwt-token
+JWT_EXPIRE=30d
+JWT_REFRESH_SECRET=sosyaletkinlik-refresh-token-secret
+JWT_REFRESH_EXPIRE=7d
 
-# Gmail SMTP Ayarları - GERÇEK MAİL GÖNDERME AYARLARI
-EMAIL_HOST=smtp.gmail.com
-EMAIL_PORT=587
-# Gmail adresinizi girin
-EMAIL_USER=mcalbak123@gmail.com
-EMAIL_PASSWORD=lqmdwoxngcdvozop
-FROM_NAME=Sosyal Etkinlik Platformu
-FROM_EMAIL=mcalbak123@gmail.com
-ETHEREAL_EMAIL=false
+# Email Configuration for Gmail
+EMAIL_USERNAME=mcalbak123@gmail.com
+EMAIL_PASSWORD=kjmirxnggswjybdy
 
-
-# Client URL'leri
+# Client URLs
 CLIENT_URL_WEB=http://localhost:3000
-CLIENT_URL_MOBILE=exp://localhost:19000 LE=exp://localhost:19000 LE=exp://localhost:19000 LE=exp://localhost:19000 LE=exp://localhost:19000 
+CLIENT_URL_MOBILE=exp://localhost:19000
