--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
-    "test": "jest"
+    "test": "jest",
+    "seed:hobbies": "node src/utils/seedHobbies.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
