--- a/mobile/package.json
+++ b/mobile/package.json
@@ -18,13 +18,12 @@
     "axios": "^1.3.4",
     "expo": "~48.0.18",
     "expo-constants": "~14.2.1",
-    "expo-dev-client": "~2.2.1",
     "expo-image-picker": "~14.1.1",
     "expo-linking": "~4.0.1",
     "expo-location": "~15.1.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.8",
+    "react-native": "0.71.14",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-maps": "1.3.2",
     "react-native-paper": "^5.9.1",
@@ -33,7 +32,8 @@
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
     "socket.io-client": "^4.6.1",
-    "zustand": "^4.3.8"
+    "zustand": "^4.3.8",
+    "expo-asset": "~8.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
