web için Etkinlik arama ve listeleme sistemi oluşumu

--- a/mobile/app.json
+++ b/mobile/app.json
@@ -35,6 +35,7 @@
         "projectId": "sosyal-etkinlik"
       }
     },
-    "owner": "sosyaletkinlik"
+    "owner": "sosyaletkinlik",
+    "hostUri": "10.196.204.140"
   }
 } 
