--- a/mobile/package.json
+++ b/mobile/package.json
@@ -12,13 +12,17 @@
     "@expo/ngrok": "^4.1.3",
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-community/datetimepicker": "6.7.3",
+    "@react-native-picker/picker": "2.4.8",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "axios": "^1.3.4",
     "expo": "~48.0.18",
+    "expo-asset": "~8.9.1",
     "expo-constants": "~14.2.1",
     "expo-image-picker": "~14.1.1",
+    "expo-linear-gradient": "^14.1.4",
     "expo-linking": "~4.0.1",
     "expo-location": "~15.1.1",
     "expo-status-bar": "~1.4.4",
@@ -32,8 +36,7 @@
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
     "socket.io-client": "^4.6.1",
-    "zustand": "^4.3.8",
-    "expo-asset": "~8.9.1"
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
