--- a/mobile/package.json
+++ b/mobile/package.json
@@ -6,13 +6,17 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "network-check": "node scripts/checkNetworkConnection.js",
+    "dev": "node scripts/setup.js",
+    "prestart": "node scripts/checkNetworkConnection.js"
   },
   "dependencies": {
     "@expo/ngrok": "^4.1.3",
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/datetimepicker": "6.7.3",
+    "@react-native-community/netinfo": "9.3.7",
     "@react-native-picker/picker": "2.4.8",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
@@ -22,14 +26,16 @@
     "expo-asset": "~8.9.1",
     "expo-constants": "~14.2.1",
     "expo-image-picker": "~14.1.1",
-    "expo-linear-gradient": "^14.1.4",
+    "expo-linear-gradient": "~12.1.2",
     "expo-linking": "~4.0.1",
     "expo-location": "~15.1.1",
+    "expo-network": "~5.2.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.14",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-maps": "1.3.2",
+    "react-native-network-info": "^5.2.1",
     "react-native-paper": "^5.9.1",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
