--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "axios": "^1.9.0",
     "expo-linear-gradient": "^14.1.4",
     "react-native-linear-gradient": "^2.8.3"
   }
