--- a/mobile/package.json
+++ b/mobile/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "axios": "^1.3.4",
+    "date-fns": "^4.1.0",
     "expo": "~48.0.18",
     "expo-asset": "~8.9.1",
     "expo-constants": "~14.2.1",
@@ -36,11 +37,13 @@
     "react-native-gesture-handler": "~2.9.0",
     "react-native-maps": "1.3.2",
     "react-native-network-info": "^5.2.1",
+    "react-native-pager-view": "^6.8.0",
     "react-native-paper": "^5.9.1",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
+    "react-native-tab-view": "^4.1.0",
     "socket.io-client": "^4.6.1",
     "zustand": "^4.3.8"
   },
