Argo ve uygunsuz sohbet için yapay zeka analizi eklendi

--- a/backend/.env
+++ b/backend/.env
@@ -17,3 +17,5 @@ EMAIL_PASSWORD=kjmirxnggswjybdy
 # Client URLs
 CLIENT_URL_WEB=http://localhost:3000
 CLIENT_URL_MOBILE=exp://localhost:19000
+GEMINI_API_KEY=AIzaSyCdHAHanLunug1DYBz8e_kM6SE80iEA3Xc
+STRICT_MODERATION=false
