--- a/mobile/package.json
+++ b/mobile/package.json
@@ -44,6 +44,7 @@
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
     "react-native-tab-view": "^4.1.0",
+    "react-native-toast-message": "^2.3.0",
     "socket.io-client": "^4.6.1",
     "zustand": "^4.3.8"
   },
